--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -1,50 +1,92 @@
-# Github Action은 로컬 환경과 완전히 독립적으로 동작함!
-
-# 워크플로우의 이름, Github 저장소의 Action 탭에서 표시됨
+# GitHub Pages에 Hugo 사이트를 빌드하고 배포하기 위한 워크플로우
 name: Deploy Hugo site to Pages
 
+on:
+  # 기본 브랜치(main)로 푸시할 때 실행
+  push:
+    branches:
+      - main
 
-on: # 워크플로우 실행 이벤트 지정
-  push: # 브랜치에 푸시될 때 자동 실행
-    branches: ["main"]
-  workflow_dispatch: # 깃허브 웹 인터페이스에서 수동 실행 가능
+  # Actions 탭에서 수동으로 실행 가능
+  workflow_dispatch:
 
-permissions: # 워크플로우 권한 설정
-  contents: read # 저장소 내용 읽기 권한
-  pages: write # 깃허브 페이지 업데이트 권한
-  id-token: write # OIDC 토큰 생성 권한 
+# GitHub Pages 배포를 위한 GITHUB_TOKEN 권한 설정
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
-concurrency: # 같은 워크플로우의 중복 실행 관리
-  group: "pages" # 동일 그룹 내 워크플로우 실행 제한
-  cancel-in-progress: false # 이미 실행 중인 워크플로우 취소하지 않음
+# 동시 배포 설정 - 진행 중인 배포는 취소하지 않고 완료되도록 함
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
-jobs: # 워크플로우의 작업들
-  build: # 1번째 작업 이름
-    runs-on: ubuntu-latest # 우분투 최신 버전에서 실행
+# 기본 셸을 bash로 설정
+defaults:
+  run:
+    shell: bash
+
+jobs:
+  # 빌드 작업
+  build:
+    runs-on: ubuntu-latest
+    env:
+      HUGO_VERSION: 0.145.0
+      HUGO_ENVIRONMENT: production
+      TZ: Asia/Seoul  # 한국 시간대로 설정
     steps:
-      - name: Checkout # git 저장소를 가져옴
-        uses: actions/checkout@v3 
+      - name: Hugo CLI 설치
+        run: |
+          wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
+          && sudo dpkg -i ${{ runner.temp }}/hugo.deb
+      - name: Dart Sass 설치
+        run: sudo snap install dart-sass
+      - name: 저장소 체크아웃
+        uses: actions/checkout@v4
         with:
-          submodules: recursive # git 서브모듈(테마 등)도 가져옴
-      - name: Setup Hugo # Hugo 설치 단계
-        uses: peaceiris/actions-hugo@v2 # 많이 사용되는 Hugo 설치 액션
+          submodules: recursive  # 테마 등의 서브모듈도 함께 가져옴
+          fetch-depth: 0
+      - name: Pages 설정
+        id: pages
+        uses: actions/configure-pages@v5
+      - name: Node.js 의존성 설치 (필요한 경우)
+        run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
+      - name: 캐시 복원
+        id: cache-restore
+        uses: actions/cache/restore@v4
         with:
-          hugo-version: 'latest'
-          extended: true # SCSS/SASS 지원을 위한 확장 버전 사용
-      - name: Build with Hugo # 실제 Hugo 사이트 실행 명령어 실행
-        run: hugo --minify # 최소 출력으로 사이트 빌드
-      - name: Upload artifact # 빌드된 파일을 Github Actions 아티팩트로 업로드
+          path: |
+            ${{ runner.temp }}/hugo_cache
+          key: hugo-${{ github.run_id }}
+          restore-keys:
+            hugo-
+      - name: Hugo로 사이트 빌드
+        run: |
+          hugo \
+            --gc \
+            --minify \
+            --baseURL "${{ steps.pages.outputs.base_url }}/" \
+            --cacheDir "${{ runner.temp }}/hugo_cache"
+      - name: 캐시 저장
+        id: cache-save
+        uses: actions/cache/save@v4
+        with:
+          path: |
+            ${{ runner.temp }}/hugo_cache
+          key: ${{ steps.cache-restore.outputs.cache-primary-key }}
+      - name: 결과물 업로드
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./public # Hugo가 생성한 정적 파일 디렉토리 지정
+          path: ./public
 
-  deploy: # 배포 작업
-    environment: # 배포 환경
-      name: github-pages # github Page 사용
-      url: ${{ steps.deployment.outputs.page_url }} # 배포 URL(자동 설정)
+  # 배포 작업
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    needs: build # build 작업 후에만 실행됨
+    needs: build
     steps:
-      - name: Deploy to GitHub Pages # 실제 Github Pages에 배포되는 단계
+      - name: GitHub Pages에 배포
         id: deployment
-        uses: actions/deploy-pages@v2 # Github에서 제공되는 공식 Pages 배포 액션  
+        uses: actions/deploy-pages@v4
